@@ -185,3 +185,4 @@ COM_INSTALLER_HEADER_LANGUAGES="Install Accredited Language Translations"
 COM_INSTALLER_HEADING_DETAILS_URL="Details URL"
 COM_INSTALLER_MSG_LANGUAGES_NOLANGUAGES="There are no available languages to install at the moment. Please click on the &quot;Purge Cache&quot; and &quot;Find languages&quot; buttons to check for updates on the Joomla Languages server. You will need an internet connection for this to work."
 COM_INSTALLER_LANGUAGES_FILTER_SEARCH_DESC="Search by language name."
+COM_INSTALLER_FILTER_LABEL="Search by extension name"
