@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#31189] Some fields are missing from the tags edit screen. Thanks Elin Waring
  # [#31167] Add class="btn-group" for hathor Options. Thanks Tobias Zulauf
  # [#30751] No image for Tag Component at the template Hathor. Thanks Andrea Tarr and Ulrika Hall
+ $ [#31173] Only default/global Filter Label for seach at the Extensions Manager. Thanks Tobias Zulauf
 
 13-Jun-2013 Jean-Marie Simonet
  ^ [#31134] *Improving Content Languages edit and manager. Thanks Benjamin Trenkle and Roland Dalmulder 
